# HonsProject

./: .gitignore  README.md  install.sh  run.sh
IRDumper/: .gitignore  Makefile
IRDumper/src/lib/: CMakeLists.txt  IRDumper.cpp  IRDumper.h
SysCallDetector/: Makefile
SysCallDetector/src/: CMakeLists.txt
SysCallDetector/src/lib/: CMakeLists.txt  main.cpp
TFA/: Makefile  README
TFA/src/: CMakeLists.txt
TFA/src/lib/: Analyzer.cc  Analyzer.h  CMakeLists.txt  Common.cc  Common.h  Config.h  Tools.cc  Tools.h
TFA/src/lib/AliasAnalysis/: AliasAnalysis.h  AliasAnalysisTools.cc  FuncAliasAnalysis.cc  ICallAliasAnalysis.cc  ICallDFAnalysis.cc  InstHandler.cc  InterAliasAnalysis.cc
TFA/src/lib/CallGraph/: CallGraph.cc  CallGraph.h  CallGraphTools.cc  CheckReturnCompType.cc  DataFlowAnalysis.cc  DebugInfoHandler.cc  EscapeHandler.cc  FuncAnalysis.cc  InitinGlobal.cc  LayerAnalysis.cc  OneLayerHandler.cc  TypeAnalysis.cc
TFA/src/lib/TypeBuilder/: TypeBuilder.cc  TypeBuilder.h  TypeBuilderTools.cc
logs/: install.log.2024-09-19-17:47:02.bak  install.log.2024-09-19-17:54:03.bak  install.log.2024-09-19-17:55:20.bak  install.log.2024-09-19-18:20:18.bak  install.log.2024-09-20-14:37:04.bak  install.log.2024-09-20-14:42:39.bak  install.log.2024-09-20-15:01:49.bak  install.log.2024-09-20-15:21:47.bak  install.log.2024-09-20-15:27:58.bak  install.log.2024-09-21-21:06:57.bak  install.log.2024-09-21-21:08:17.bak
report/: thesis.tex
